--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
             "email": "favaserver@gmail.com"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "php": ">=7.0"
     },
